# motyga-cli

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  AGENTS.md  MODULE.bazel  MOTYGA_REBRAND.md  NOTICE  README.md  defs.bzl  flake.nix  justfile  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.codex/environments/: environment.toml  setup.py
.devcontainer/: README.md  devcontainer.json
.github/: CODEOWNERS  blob-size-allowlist.txt  dependabot.yaml
.github/scripts/: build-codex-package-archive.sh  run-argument-comment-lint-bazel.sh  rusty_v8_bazel.py  test_run_bazel_with_buildbuddy.py  test_v8_canary_changes.py  v8_canary_changes.py  verify_bazel_clippy_lints.py  verify_cargo_workspace_manifests.py  verify_tui_core_boundary.py
.github/workflows/: release.yml
codex-cli/: package.json
codex-cli/scripts/: build_npm_package.py
codex-rs/cli/: Cargo.toml
codex-rs/core/: gpt-5.2-codex_prompt.md  gpt_5_2_prompt.md  gpt_5_codex_prompt.md
codex-rs/exec/src/: cli.rs  (+2 more)
codex-rs/models-manager/: models.json  prompt.md
docs/: agents_md.md  authentication.md  config.md  example-config.md  exec.md  execpolicy.md  getting-started.md  install.md  sandbox.md  skills.md  slash_commands.md
motyga-rs/: Cargo.toml  default.nix
motyga-rs/app-server/: BUILD.bazel  README.md
motyga-rs/app-server-daemon/: README.md
motyga-rs/app-server-test-client/: README.md
motyga-rs/bwrap/: BUILD.bazel  build.rs
motyga-rs/cli/: BUILD.bazel
motyga-rs/code-mode/: Cargo.toml
motyga-rs/code-mode/src/: lib.rs  runtime_stub.rs
motyga-rs/code-mode/src/cell_actor/: mod.rs
motyga-rs/code-mode/src/runtime/: mod.rs
motyga-rs/core/: BUILD.bazel  README.md  config.schema.json  gpt_5_1_prompt.md  prompt_with_apply_patch_instructions.md
motyga-rs/core/tests/remote_env_windows/: BUILD.bazel  README.md
motyga-rs/docs/: bazel.md
motyga-rs/exec-server/: BUILD.bazel
motyga-rs/linux-sandbox/: BUILD.bazel
motyga-rs/memories/: README.md
motyga-rs/models-manager/: models.json
motyga-rs/network-proxy/: README.md
motyga-rs/responses-api-proxy/: README.md
motyga-rs/rmcp-client/: BUILD.bazel
motyga-rs/scripts/: setup-windows.ps1
scripts/: debug-codex.sh  format.py  list-bazel-clippy-targets.sh  list-bazel-release-targets.sh  mock_responses_websocket_server.py  run_tui_with_exec_server.sh  stage_npm_packages.py  start-codex-exec.sh  test-remote-env.sh
(+625 files in other folders)
